Fixing input-group and wordTypeText fields on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,15 @@ body {
 		margin-right: 10px;
 	}
 
+	.input-group {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.wordTypeText {
+		padding-right: 0;
+	}
+
 	.story-text {
 		width: 80%;
 	}
